tests/compile_failures/empty_combinebits.rs
use splitbits::*;

fn main() {
    combinebits!();
}
